# stochastic-computing

./: .gitignore  .gitmodules  Makefile  main.py  pyproject.toml
analytical_modeling/: CambriconU_AM.py  binary_AM.py  compare.py  dataflow.py  energy.py  main.py  plot.py  power.py  run_scalesim.py  run_usystolicsim.py  uGEMM_AM.py  uSystolic_AM.py  validate.py
analytical_modeling/configs/: binary_64x64.cfg  binary_int8.cfg
analytical_modeling/layouts/: stub_layout.csv
analytical_modeling/topologies/: compare_shapes.csv  gemm_shapes.csv
synthesis/: energy_cache.json  synth.tcl
synthesis/verilog/: basic_comp.sv  binary.sv  cambricon.sv  logic_gates.sv  systolic.sv  ugemm.sv
topologies/: compare_shapes.csv
