[project]
name = "stochastic-computing"
version = "0.1.0"
description = "Stochastic computing research: analytical models, simulators, and experiments"
requires-python = ">=3.11"
dependencies = [
    "scalesim",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[tool.uv.sources]
scalesim = { path = "./analytical_modeling/scale-sim-v2", editable = true }